--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,9 +5,50 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #333;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+header {
+  text-align: center;
+  border-bottom: 1px solid #999;
+  margin: 0 5%;
+  padding: 1% 0;
+}
+
+h1 {
+  font-weight: normal;
+  font-size: 24px;
+}
+
+h2 {
+  text-align: center;
+  font-weight: normal;
+  font-size: 22px;
+}
+
+nav {
+  margin: 1% 5% 3%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+a {
+  color: #666;
+  text-decoration: none;
+  border-bottom: 1px solid #666;
+}
+
+a:hover {
+  opacity: 0.8;
+  border-bottom: none;
+}
+
+section {
+  margin: 2% 5%;
 }
