--- a/client/src/index.css
+++ b/client/src/index.css
@@ -66,3 +66,11 @@ form td {
 form td.btn {
   text-align: center;
 }
+
+.error {
+  color: #ff0000;
+  background-color: #ffefef;
+  border-radius: 5px;
+  padding: 5px;
+  margin-bottom: 10px;
+}
