--- a/client/src/index.css
+++ b/client/src/index.css
@@ -74,3 +74,14 @@ form td.btn {
   padding: 5px;
   margin-bottom: 10px;
 }
+
+.third-party-login {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.third-party-login a {
+  margin: 10px auto;
+}
