--- a/client/src/index.css
+++ b/client/src/index.css
@@ -53,6 +53,20 @@ section {
   margin: 2% 5%;
 }
 
+.product {
+  border: 1px #999 solid;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+.productDetail {
+  border: 1px #999 solid;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
 form {
   display: flex;
   justify-content: center;
